frontend/kubernetes/traefik-ingress-route.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bahn-alarm-frontend
  namespace: bahn-alarm
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`bahn-alarm.com`)
      services:
        - name: bahn-alarm-frontend
          port: web
  tls:
    certResolver: letsencrypt-production
